<resources>
    <string name="app_name">PI3-ES-2024-T22</string>
    <string name="login">Login</string>
    <string name="email"><font color="#FFFFFF">Email</font></string>
    <string name="password"><font color="#FFFFFF">Senha</font></string>
    <string name="esqueceu_sua_senha"><font color="#FFFFFF">Esqueceu sua senha?</font><font color="#34BAAB"> Clique aqui</font> </string>
    <string name="toque_para_se_registrar"><font color="#FFFFFF">Não tem uma conta?</font><font color="#34BAAB"> Criar conta</font></string>
    <string name="concluir_login"><font color="#FFFFFF">Continuar</font></string>
    <string name="Mapa"><font color="#FFFFFF">Visualizar Armários</font> </string>


    <string name="concluir_registro"><font color="#FFFFFF">Concluir</font></string>
    <string name="esqueci_minha_senha">esqueci_minha_senha</string>
    <string name="esqueci_a_minha_senha"><font color="#FFFFFF">Solicitar recuperação senha</font></string>
    <string name="ou"><font color="#FFFFFF">OU</font></string>


    <string name="register"><font color="#FFFFFF">Register</font></string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout"><font color="#FFFFFF">Sair</font></string>
    <string name="cadastrar_cartao_de_credito">Cadastrar cartao de credito</string>
    <string name="title_activity_cadastrar_cartao">CadastrarCartao</string>
    <string name="cadastrar_cartao"><font color="#FFFFFF">Cadastrar cartao</font></string>
    <string name="concluir">Concluir</string>

    <string name="scan_nfc_tag"><font color="#FFFFFF">Scan NFC Tag</font></string>
    <string name="concluir_cadastro"><font color="#FFFFFF">Concluir Cadastro</font></string>
    <string name="nome_completo"><font color="#FFFFFF">Nome Completo</font></string>
    <string name="numero_de_celular"><font color="#FFFFFF">Numero de celular</font></string>
    <string name="cpf"><font color="#FFFFFF">CPF</font></string>
    <string name="data_de_nascimento"><font color="#FFFFFF">Data de Nascimento</font></string>

    <string name="senha">Senha</string>
    <string name="registrar_se"><font color="#FFFFFF">Informações Pessoais</font></string>
    <string name="toque_para_realizar_o_login"><font color="#FFFFFF">Já tem uma conta?</font><font color="#34BAAB">Fazer login</font></string>
    <string name="criar_conta"><font color="#FFFFFF">Criar Conta</font></string>


    <string name="j_possui_uma_conta_fa_a_login_aqui">Já possui uma conta? Faça login aqui.</string>
    <string name="enviar_solicitacao">enviar_solicitacao</string>


    <string name="enviarso_solicita_o">Enviarso solicitação</string>
    <string name="enviar_solicita_o"><font color="#FFFFFF">enviar solicitação</font></string>
    <string name="ja_possui_uma_conta_toque_para_realizar_o_login"><font color="#FFFFFF">Ja possui uma conta?
    </font><font color="#34BAAB">Fazer login</font></string>
    <string name="continuar_sem_cart_o_de_cr_dito">Continuar sem cartão de crédito</string>
    <string name="MAPS_API_KEY">AIzaSyBzgLroNVUivmkYw8nsOMSi2Y-1OYnDou8</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="view_lockers"><font color="#FFFFFF">Visualizar Armários</font></string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="alugar">Alugar</string>
    <string name="nome_do_local">Nome do Local</string>
    <string name="endere_o_do_local">Endereço do Local</string>
    <string name="pre_os_do_local">Preços do Local</string>
    <string name="confirmar_compra">Confirmar Compra</string>
    <string name="ver_pre_os">Ver Preços</string>
    <string name="cadastro_do_cartao"><font color="#FFFFFF">Cadastro do cartão</font></string>
    <string name="numero_do_cartao"><font color="#FFFFFF">Número do cartão</font></string>
    <string name="nome_no_cartao"><font color="#FFFFFF">Nome</font></string>
    <string name="cvc"><font color="#FFFFFF">CVC</font></string>
    <string name="validade"><font color="#FFFFFF">Validade</font></string>
    <string name="cadastrar"><font color="#FFFFFF">Cadastrar</font></string>
    <string name="data_nascimento_hint">DD/MM/AA</string>

</resources>
