<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ForgotPassword"
    android:background="@drawable/degrade"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="133dp"
        android:layout_margin="20dp"
        android:src="@mipmap/logop"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="289dp"
        android:layout_height="33dp"
        app:srcCompat="@mipmap/nomelogop"
        tools:ignore="ContentDescription"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/esqueci_a_minha_senha"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_input"
        android:hint="@string/email"
        android:padding="10dp"
        android:textSize="18sp" />

    <Space
        android:layout_width="321dp"
        android:layout_height="36dp" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/enviar_solicita_o" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ja_possui_uma_conta_toque_para_realizar_o_login"
        android:textSize="17sp"
        android:textStyle="bold"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ProgressBar>

</LinearLayout>
