<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    android:gravity="center"

    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Login"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_on_primary_disabled"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:gravity="start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="712dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="169dp"
                android:layout_height="133dp"
                android:layout_margin="20dp"
                android:src="@mipmap/logop"
                tools:ignore="ContentDescription" />


            <TextView
                android:layout_width="296dp"
                android:layout_height="51dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/cadastro_do_cartao"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_no_cartao"
                    android:textColor="#FFFDFD" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/style_input"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_do_cartao" />

                <EditText
                    android:id="@+id/editTextNumberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/style_input"
                    android:inputType="numberSigned"
                    android:paddingLeft="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="9dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/validade" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cvc" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextNumberSigned3"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_weight="1"
                        android:background="@drawable/style_input"
                        android:ems="10"
                        android:inputType="numberSigned" />

                    <Space
                        android:layout_width="81dp"
                        android:layout_height="26dp" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_weight="1"
                        android:background="@drawable/style_input"
                        android:ems="10"
                        android:inputType="date" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/cadastrar" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>